package NYT.NTabletServer.NProto;

import "yt/core/misc/guid.proto";
import "yt/ytlib/chunk_client/chunk_meta.proto";

////////////////////////////////////////////////////////////////////////////////

message TReqAssignPeers
{
    required NYT.NProto.TGuid cell_id = 1;
    repeated int32 node_ids = 2;
}

message TReqRevokePeers
{
    required NYT.NProto.TGuid cell_id = 1;
    repeated int32 peer_ids = 2;
}

message TRspMountTablet
{
    required NYT.NProto.TGuid tablet_id = 1;
}

message TRspUnmountTablet
{
    required NYT.NProto.TGuid tablet_id = 1;
}

message TAddStoreDescriptor
{
    required NYT.NProto.TGuid store_id = 1;
    optional NYT.NChunkClient.NProto.TChunkMeta chunk_meta = 2;
    required NYT.NProto.TGuid backing_store_id = 3;
}

message TRemoveStoreDescriptor
{
    required NYT.NProto.TGuid store_id = 1;
}

message TReqUpdateTabletStores
{
    required NYT.NProto.TGuid tablet_id = 1;
	repeated TAddStoreDescriptor stores_to_add = 2;	
	repeated TRemoveStoreDescriptor stores_to_remove = 3;	
}

////////////////////////////////////////////////////////////////////////////////

